# docbot

./: Cargo.toml
src/docbot/: Cargo.toml  did_you_mean.rs  fold_error.rs  fold_help.rs  lib.rs  tokenize.rs
src/docbot-derive/: Cargo.toml  attrs.rs  docs.rs  lib.rs  opts.rs  trie.rs
src/docbot-derive/bits/: help.rs  id.rs  inputs.rs  mod.rs  parse.rs  path.rs
src/docbot-derive/inputs/: command.rs  field.rs  mod.rs
