[package]
name = "docbot-derive"
version = "0.3.0-alpha.2"
authors = ["raykast <rookie1286@gmail.com>"]
edition = "2021"
description = "Derive macros for docbot"
documentation = "https://docs.rs/docbot-derive/"
repository = "https://github.com/ray-kast/docbot"
license = "MIT OR Apache-2.0"
keywords = ["chatbot", "repl"]
category = ["command-line-interface", "parsing"]

[lib]
name = "docbot_derive"
proc-macro = true
path = "lib.rs"

[dependencies]
anyhow = "1.0.34"
lazy_static = "1.4.0"
proc-macro2 = "1.0.24"
quote = "1.0.7"
regex = "1.4.2"
syn = { version = "1.0.45", features = ["derive", "extra-traits", "full"] }
