[package]
name = "docbot"
version = "0.3.0-alpha.1"
authors = ["raykast <rookie1286@gmail.com>"]
edition = "2021"
description = "Define a chatbot or REPL interface via doc comments"
documentation = "https://docs.rs/docbot-derive/"
repository = "https://github.com/ray-kast/docbot"
license = "MIT OR Apache-2.0"
keywords = ["chatbot", "repl"]
category = ["command-line-interface", "parsing"]

[lib]
name = "docbot"
path = "lib.rs"

[dependencies]
anyhow = "1.0.52"
docbot-derive = { version = "0.3.0-alpha.1", path = "../docbot-derive" }
lazy_static = "1.4.0"
regex = "1.5.4"
thiserror = "1.0.30"
